# pytest-benchmark-example

./: .gitignore  Makefile  README.md  pyproject.toml
pytest_benchmarks_example/: model.py
tests/: test_model.py
