[tool.poetry]
name = "pytest-benchmarks-example"
version = "0.1.0"
description = ""
authors = ["Alexandre Candeias"]
readme = "README.md"
packages = [{include = "pytest_benchmarks_example"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"
torch = "^2.0.1"
numpy = "1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
